2003-09-29  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: fixed delete person problem.

2003-09-29  Alex Roitman  <shura@alex.neuro.umn.edu>
	* TODO: Update the list with the postponed todo items.
	* configure.in: Increment release number.

2003-09-28  Don Allingham  <dallingham@users.sourceforge.net>
	* Version 0.9.4:  the "This used to bug me..." release.

2003-09-28  Tim Waugh  <twaugh@redhat.com>
	* configure.in: Fetch ChangeLog from srcdir, not builddir (fixes
	'make distcheck').
	* src/po/Makefile.am: Fetch zh_CN.po from srcdir, not builddir (fixes
	'make distcheck').

2003-09-27  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/C/filtref.xml: Manual corrections. 
	* doc/gramps-manual/C/cmdline.xml: Likewise.
	* doc/gramps-manual/C/mainwin.xml: Likewise.
	* doc/gramps-manual/C/figures/pedigree.png: Update figure.

2003-09-27  Don Allingham  <dallingham@users.sourceforge.net>
	* src/docgen/RTFDoc.py: Fixed double printing of lines

2003-09-26  Lorenzo Cappelletti  <lorenzo.cappelletti@email.it>
	* src/po/it.po: Italian translation.

2003-09-25  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/DetAncestralReport.py: Fix translatable string.
	* src/plugins/rel_ru.py: Add more possible language codes.
	* doc/gramps-manual/C/figures/family-alt.png: Add figure.
	* doc/gramps-manual/C/figures/family.png: Update figure.
	* doc/gramps-manual/C/figures/places.png: Update figure.

2003-09-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WriteFTree.py: increment the count properly

2003-09-23  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EventEditor.py: Fix destroy window callback
	* src/dialog.glade: removed unused callbacks

2003-09-22  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/po/ru.po: Update Russian translation. 
	* doc/gramps-manual/C/gramps-manual.xml: Update manual.
	* doc/gramps-manual/C/filtref.xml: Add file -- split appendix 
	into a separate file.