@@ -1199,8 +1199,8 @@
 			  <child>
 			    <widget class="GtkLabel" id="label184">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Filter:</property>
-			      <property name="use_underline">False</property>
+			      <property name="label" translatable="yes">Fi_lter:</property>
+			      <property name="use_underline">True</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_CENTER</property>
 			      <property name="wrap">False</property>
@@ -1209,6 +1209,7 @@
 			      <property name="yalign">0.5</property>
 			      <property name="xpad">5</property>
 			      <property name="ypad">0</property>
+			      <property name="mnemonic_widget">filter_list</property>
 			    </widget>
 			    <packing>
 			      <property name="padding">4</property>
@@ -1253,7 +1254,7 @@
 			  <child>
 			    <widget class="GtkLabel" id="qual">
 			      <property name="label" translatable="yes">Qualifier:</property>
-			      <property name="use_underline">False</property>
+			      <property name="use_underline">True</property>
 			      <property name="use_markup">False</property>
 			      <property name="justify">GTK_JUSTIFY_CENTER</property>
 			      <property name="wrap">False</property>
@@ -1262,6 +1263,7 @@
 			      <property name="yalign">0.5</property>
 			      <property name="xpad">5</property>
 			      <property name="ypad">0</property>
+			      <property name="mnemonic_widget">filter</property>
 			    </widget>
 			    <packing>
 			      <property name="padding">3</property>
@@ -1307,7 +1309,7 @@
 			      <property name="visible">True</property>
 			      <property name="tooltip" translatable="yes">Show people that do not match the filtering rule</property>
 			      <property name="can_focus">True</property>
-			      <property name="label" translatable="yes">Invert</property>
+			      <property name="label" translatable="yes">_Invert</property>
 			      <property name="use_underline">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="active">False</property>
