@@ -1,9 +1,15 @@
-2003-09-29  Don Allingham  <dallingham@users.sourceforge.net>
-	* src/gramps_main.py: fixed delete person problem.
-
 2003-09-29  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* TODO: Update the list with the postponed todo items.
 	* configure.in: Increment release number.
+	* src/Plugins.py: Fix label for the tools dialog. 
+	* src/gramps.glade: Add accelerators to filter controls. 
+	* src/places.glade: Fix accelerator in Edit Plase dialog. 
+	* src/gramps_main.py: Typo.
+	* src/PlaceView.py: Likewise.
+	* src/GenericFilter.py: Likewise.
+
+2003-09-29  Don Allingham  <dallingham@users.sourceforge.net>
+	* src/gramps_main.py: fixed delete person problem.
 
 2003-09-28  Don Allingham  <dallingham@users.sourceforge.net>
 	* Version 0.9.4:  the "This used to bug me..." release.
